Your commit message here

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.203.0",
-    "@aws-cdk/aws-ecs": "^1.203.0",
-    "@aws-cdk/aws-ecs-patterns": "^1.203.0",
+    "@aws-cdk/aws-ec2": "^1.12.0",
+    "@aws-cdk/aws-ecs": "^1.12.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.91.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -27,6 +27,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^4.10.0",
+    "@supabase/supabase-js": "^2.48.1",
     "@types/react-dom": "^18.3.1",
     "airtable": "^0.12.2",
     "aws-cdk-lib": "^2.173.0",
